@@ -6,10 +6,10 @@ buildscript {
     file("$projectDir/../constants.properties").withInputStream { constants.load(it) }
 
     ext {
-        corda_release_group = constants.getProperty("cordaReleaseGroup")
-        corda_core_release_group =  constants.getProperty("cordaCoreReleaseGroup")
-        corda_release_version = constants.getProperty("cordaVersion")
-        corda_core_release_version = constants.getProperty("cordaCoreVersion")
+        corda_enterprise_release_group = constants.getProperty("cordaEnterpriseReleaseGroup")
+        corda_os_release_group = constants.getProperty("cordaOsReleaseGroup")
+        corda_enterprise_release_version = constants.getProperty("cordaEnterpriseVersion")
+        corda_os_release_version = constants.getProperty("cordaOsVersion")
         corda_gradle_plugins_version = constants.getProperty("gradlePluginsVersion")
         corda_solana_notary_version = constants.getProperty("cordaSolanaNotaryVersion")
         corda_tokens_release_version = constants.getProperty("cordaTokensVersion")
@@ -47,7 +47,12 @@ allprojects {
     apply plugin: 'kotlin'
 
     tasks.withType(Test) {
-        jvmArgs = rootProject.ext.testJvmArgs
+        jvmArgs = ['--add-opens', 'java.base/java.time=ALL-UNNAMED', '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+                       '--add-opens', 'java.base/java.util=ALL-UNNAMED', '--add-opens', 'java.base/java.net=ALL-UNNAMED',
+                       '--add-opens', 'java.base/java.nio=ALL-UNNAMED', '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
+                       '--add-opens', 'java.base/java.security.cert=ALL-UNNAMED', '--add-opens', 'java.base/java.security=ALL-UNNAMED',
+                       '--add-opens', 'java.base/javax.net.ssl=ALL-UNNAMED', '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+                       '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED', '--add-opens', 'java.sql/java.sql=ALL-UNNAMED',]
     }
 
     tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile) {
@@ -74,7 +79,6 @@ apply plugin: 'net.corda.plugins.cordapp'
 apply plugin: 'net.corda.plugins.cordformation'
 apply plugin: 'net.corda.plugins.quasar-utils'
 
-
 sourceSets {
     main {
         resources {
@@ -85,15 +89,15 @@ sourceSets {
 
 dependencies {
     // Corda dependencies.
-    cordaProvided "$corda_core_release_group:corda-core:$corda_core_release_version"
-    cordaBootstrapper ("$corda_release_group:corda-node-api:$corda_release_version") {
+    cordaProvided "$corda_os_release_group:corda-core:$corda_os_release_version"
+    cordaBootstrapper ("$corda_enterprise_release_group:corda-node-api:$corda_enterprise_release_version") {
         exclude group: "ch.qos.logback", module: "logback-classic"
     }
-    corda "$corda_release_group:corda:$corda_release_version"
+    corda "$corda_enterprise_release_group:corda:$corda_enterprise_release_version"
 
-    //corda "$corda_core_release_group:corda-node:$corda_core_release_version"
-    //cordaBootstrapper ("$corda_core_release_group:corda-node-api:$corda_core_release_version")
-    //cordaDriver "$corda_core_release_group:corda-shell:$corda_shell_version"
+    //corda "$corda_os_release_group:corda-node:$corda_os_release_version"
+    //cordaBootstrapper ("$corda_os_release_group:corda-node-api:$corda_os_release_version")
+    //cordaDriver "$corda_os_release_group:corda-shell:$corda_shell_version"
 
     cordapp "com.r3.corda.lib.tokens:tokens-contracts:$corda_tokens_release_version"
     cordapp "com.r3.corda.lib.tokens:tokens-workflows:$corda_tokens_release_version"
